--- a/PEC1_Ej2_1/index.html
+++ b/PEC1_Ej2_1/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <title>Form Validator</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="container">
         <form id="form" class="form">
@@ -18,7 +20,7 @@
             </div>
             <div class="form-control">
                 <label for="email">Email</label>
-                <input type="email" id="email" placeholder="Enter email">
+                <input type="text" id="email" placeholder="Enter email">
                 <small>Error message</small>
             </div>
             <div class="form-control">
@@ -36,4 +38,5 @@
     </div>
     <script src="script.js"></script>
 </body>
+
 </html>
