--- a/PEC1_Ej2_1/index.html
+++ b/PEC1_Ej2_1/index.html
@@ -33,6 +33,16 @@
                 <input type="password" id="password2" placeholder="Enter password again">
                 <small>Error message</small>
             </div>
+            <div class="form-control">
+                <label for="age">Age</label>
+                <input type="text" id="age" placeholder="Enter age">
+                <small>Error message</small>
+            </div>
+            <div class="form-control">
+                <label for="url">URL</label>
+                <input type="text" id="url" placeholder="Enter personal url">
+                <small>Error message</small>
+            </div>
             <button>Submit</button>
         </form>
     </div>
