--- a/PEC1_Ej2_2/index.html
+++ b/PEC1_Ej2_2/index.html
@@ -135,7 +135,7 @@
           <input type="number" id="amount-two" placeholder="0" />
         </div>
       </div>
-  
+      <p id="msg"></p>
       <script src="script.js"></script>
 </body>
 </html>
