--- a/PEC1_Ej2_3/index.html
+++ b/PEC1_Ej2_3/index.html
@@ -67,11 +67,11 @@
     </div>
     <div class="movie-container">
       <label>Pick a movie:</label>
-      <select id="movie">
-        <option value="10">Avengers: Endgame ($10)</option>
-        <option value="12">Joker ($12)</option>
-        <option value="8">Toy Story 4 ($8)</option>
-        <option value="9">The Lion King ($9)</option>
+      <select id="movie" data-currency="USD">
+        <option value="10">Avengers: Endgame</option>
+        <option value="12">Joker</option>
+        <option value="8">Toy Story 4</option>
+        <option value="9">The Lion King</option>
       </select>
     </div>
 
