--- a/PEC1_Ej2_3/index.html
+++ b/PEC1_Ej2_3/index.html
@@ -61,7 +61,7 @@
       <option value="TRY">TRY</option>
       <option value="TWD">TWD</option>
       <option value="UAH">UAH</option>
-      <option value="USD" selected>USD</option>
+      <option value="USD">USD</option>
       <option value="UYU">UYU</option>
       <option value="VND">VND</option>
       <option value="ZAR">ZAR</option>
@@ -69,11 +69,11 @@
   </div>
   <div class="movie-container">
     <label>Pick a movie:</label>
-    <select id="movie" data-currency="USD">
-      <option value="10">Avengers: Endgame</option>
-      <option value="12">Joker</option>
-      <option value="8">Toy Story 4</option>
-      <option value="9">The Lion King</option>
+    <select id="movie">
+      <option>Avengers: Endgame</option>
+      <option>Joker</option>
+      <option>Toy Story 4</option>
+      <option>The Lion King</option>
     </select>
   </div>
 
